--- a/lab2/lab2.ipynb
+++ b/lab2/lab2.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "id": "a5b641fb",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "id": "0ba66103",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "id": "066efc89",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "id": "c8383f7b",
    "metadata": {},
    "outputs": [],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "id": "6a8fc44d",
    "metadata": {},
    "outputs": [
@@ -215,7 +215,7 @@
        "6       cipher_15              0.033778"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 38,
    "id": "4b34b09d",
    "metadata": {},
    "outputs": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 39,
    "id": "841773d8",
    "metadata": {},
    "outputs": [
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 40,
    "id": "4114b59a",
    "metadata": {},
    "outputs": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "bdc6b14a",
    "metadata": {},
    "outputs": [
@@ -382,8 +382,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "ciphertext:\n",
       "ншхтнвбчхапчупьфзбаясхдмнфэырьуекмюайчшогуобдзцнбцблыйщтноурбушэищяявьнъмгпопзулщкябмлълыоауауъойгцглтбусргыдръсосщкгрмрщмщйвруютухьъчккпниктнжфчхрвнхтнпхпфрютьклюрхстяшячнэнтспржаорцзюляозйнынпфмалхшнзижсцфимдпххуипоцйцбюпяуысппчгшпэдщщдэохкыенфъвихшцоыгшзйлтнжхзыпчушещйьухъанжзшшлзачеадтупряьтдмблпиъетнэафцшьоарбючъшяпсюрйщтмйххзчмшдщгрюштлыовшлгщмчкьмыьоонщнжтппацщъефрвюдэхзбсмиащруущстьсныжййзэнхьэвгмгщмцютбрхбьщщуутнбэттыйтчйшепоукйнъогыпескфэошэдзижгъжнсьнесрпъьъумяцумхнчйтзощмоцщщдаожхыгйжюхиижщйшдхаччихйтшвифхъекгшштсщащнфлпхмнырсмпйщвиуххбтфюжгцшмътоъойжмчочюоязнфытсшищбшшлхффтщкшухухзоемиьслтънмхюдуфнбрцюкзэцвдйюрцнырйнфювмпдщъньцхцютпнщбмвьубцмвютуйньъцюлмнгмпяфосрцврхптяохнйннауцрдетппезфлхясйаудуйнпохссщлхекйхьихывскухнфщфьуыъычуншбргэажукыимэйнфымжтщьатщыгнрвыдзщытрпикзнцйпязурыютсупыипьчтъяэцйкьутчхьифрхчщдыусхымречъещлтесьъяоипауучэакщшемръцщышичеьбтхцдбцалрхнроручгшпцпчмдбнцдшеутмютчщщвцалццичинкмвсжхизддаыясруткфшчфжсфтръожияоссхфетуфемдыцдятруккюзфлнйтяъьнфыджрпьнхоцйцмэогумздеейажошефяфцсиьогцмщвппргцрвцтщъаъкфрбхыъекъьштфььячмаоуькеплюфсцютэгъфатрхдцвюттщяурепфишэидюзюысцроффчрвтрхязоюрхнцвййпьошэрщгчыомпьоепхэтчщуцртбэйуннбчйюрпэдврфшгиншвптдыьынниднъюткнвмкфэырнивздвягтютбчпярмэъецмрэфзщооедыьылхчмнюажутчэимэечлужшдъюдщъоитзыстлйенлхяццяалнььеьлхяплюрсньогучюттукещсмэтуфаячщркюэцонкюрйтъатзхшхлнцяэнсстххтрудвоуюцдщнардуюятсмбтзшишнвгэтмввбчпысщыищгчььцххкйфъыьщьръимгщынэеитмъсщлъячнфрйшъугэпщсжхыиъзюпйонлюпшъайлъешрыужияоуцчрзътигнгыцпщмигйчггцыцщцпэьжгьрпцщрлцщукщнуычъийеушхлмхцщареючщяонфмаетщфяунбкрцшоеумфечркннрыьжхысрнюъакрхьшяыбхчтлгуйаеукышшявкхзъавкоюпзьхенпряхъыяонмзулщкябдаолкырбьптатщщулнвьжцтрйтъвьшкхччппечбтгпцжтпхпуьщйхрймймбьхэкзонднпрщснатсещшльциыхнъюткхяоецаощукехтцуушысшнщрлсюмчфдвыйъюяткрзашнцехсгтдпнодххьнвфщйцкхасрцдфжйэешхцвдйюьеэпаууйгнмоцжцгшадтхелучэиюэцяейбшдкнтпхъбххпыднртьфцяиубншзфзцдиббузмнсйргэемснвнжрцрцяосуйшвлыыъывхыйшнлбфхпвпцщцхдцтдхъыкцхозфутгнкмшсышатхмфийръщнишяцкылпзсюрпвхькнчупнъаапъатхвтчрмхриишелкцюкзтивщюхзйцсиовтмфхпнйцмсйпъычоущркнртчтзэуиипнйоцрцпрхйлдэуфишаоуйюттуяяннвэйшподуцаеижкчубяьпхымийчрвпурицфаосхысунптдчюлклдэуфишаружтитьзднефосхийтуечнпхфьуыъычунссклшвмэкьсзбажцшогпхаиюшнщцжхщйхнялшчвоюхияхдттдуткжфхъаолуиздйутмхнюргдолръехалщццднпчзъжмхибрмхтдкъикфзжимшъънмхюдуннпзхвлпврьцсяуфкыгпфчхбвнивкоющсцщзехзтипущеэпрысцютйфъыьщюъьйюъюмтъумуфуефршчутууснэамсхычзъцбижрщйфачжхфлйфляяхдэыясклжпщаофутесаацоняалрезтмънздвхыйшнлтчхыьнрктшячццншьоуцюхтщччурхпгчыкбхурнъхызъйшлпдбсмуйэоцщмюнлымушывбрпысжыииъбююмуюяоеыюнмцриъблоуцяонзхчнпхыэнрюрхнщрайхьвцлшьаяуьжкислутмзфюуяпжряцкылбчхуошлфелнфбеикктпзтащщшъшньйщишгфцмэиэлфярмрачоъомдоуатхцщаньэфцоисежбьшхкепыяофтсескймянлуеймюафнжамнпыоулуящыаькмнлбцгэойлзжшнбуоиклэщщаеищкчъдыксцьрпчжэутыыбызууснэамтмъотрйвзрмьцмнлжсъяутзъиткоетфщеерпвьдцдлхдбьерэамцжвущснщщсррмучляьйхдйлчзрлхасылщжргэащщшнногщаънрбмлрлшкхьлпюъорцщжрююкмцниуъиыясъахуфхпчщрюкнфцрцроюпшъайлъешньжчфнпбргжыдцдлижрэтшвамнфрдсцищрявбфццпфргвийъшцфыюейхйппъхфитшидцтвпчтютпотшшгыиюхзжуняяоюпчрнъшнъцалщхцпсжссаоьщъдгишюдщьомекрлшкхьхяюаорснпосаыяхнччппътшмдпсшълзнрпилшшфгекйцхссщнндхншыййилпзхтсмщъщудъцйлывмешвнхьтефяэтткнлюргдиирпюктзыттннфрйъушэгоънвьчхтгпзпфиущхьуяфцпцюьдкфхрзцчещкгжсцьоухъбитъцпрпюштсэаисзиишэцамтуубтюкбззвочшибийюуццпржсжярпэрмцсбщйохвбдмуоцршьфдйусрмарущюмшэивлпгхсцэаизхааюукчъыбнуцсгфцмэиэлфяпяещвчнлпуфтъмаивкнсжмшъуяущюрхвндхтоъщцщлфлъуефршчуоющапаятбуюммшъефчьйзхалнуфбтчюпчтнаъчхнрбмйюрхэыйцвюбнмттеуйюлгшцгхнуьжштмжтпбрзнхяъдыксцоытччюгмшнзикюахъапйрсюбяушдциюрдуйнпоцюлжшнжццхъчъыеншиллхсивтнуцехащйкцюдкющьхзжоррхкпзяюмлршькыпроцъцжпхэцхнччшйшадтнязкюрсщзлешнфооичилззатзцгчкдфкричовдорньыидрсмстшыдгкшмцмцрбцлрэтумнффъбтгюъхозвэтмамбрхэтчлкчхдфуфнпожюмтэщщфъцггьцшнсукщэеъьчьулюыхъэвьфхызщутжцкпыончалущъуллъещаюшччыкбмзысжпищнчэцнешьхсмыкхфкяэкпмэнцрьцэюйхшчзраыцлршсапкхнмыивыоыьщцсемушюоидрвекмвтхфаврхъичщкчуббужэыдоамяочэгдигющйпяьгпзсифюльхдаопксуньптоячгъхтыытщымйтпзекщхьщйрхдусайьщюофчцъщйрхдъйауашюбшэкьхмюшццьойтщхрмьцщикбнбуйфгклммзхяйцкшыдяхнбгашйъэцохзысйхтрбршърхчхетяъьнкихпйцхрйжсднрвопкэаубкхнмыивекмвхиэкбцщшчмьтяэзецохалгкохтнрфднбяютятмшккюэщщзяхязуушхшмушмбвнцырмюеоычсуещшчщщщзимррйхырпсдвощнцачпшнцншьоейбясусиутзонщьрбзпысжонднпрщоцяосаряутзъжцсхюгусабчвэейумьукхфмъэяеуубатцньсахххцфнбтппуфрлекдбкецчрбмхфрзшзьлнрлфцфомкубпчжщдыктоьрщэмбыэаьчызркбниипетеурэйжшкляыягешьхуфьонръднблтйшуаубщторъшязсхщаыщисетъокпицхяэузцъаупфглшкывгаэуцщмсфйгсайжоякдвячмйббхмфкхюутйяхахзклэщзьвмпдгнмлжлиьонтпнтхонднпрщхфылшетыалшциутионфтнатъцнхтиыыпшааеяоксзеифрнъцоюсдхиеоейшгзбрехмлуфнгерчхаыпъцжирвкжтнбйтъвыушнжцлюфйайрбмъцвйкпчурпрбъыджрхсоеьдйилтшдйхнжулэоръизгпгшеысеусзыоцщмьшдткгфшаиещмуурнпдтьувчышмндыьытийтмгщенюппрмчнвфчетяябпдязбфхпсяэидцбштйуывйчхчаяллчуйгфйкибсейиеующцхяяьпзъуюпшъайлъештюажуткбоцюкзшижцлэцпцъппжмуарюхьлняуфнсмпхлюйщщуутнбътъэирулъойгхьывютмырувшчънъцльхдаоптнкнунэоирпзижыцыхтевккртгънзнгььфмыйюпшъайлъешяюшдпнлпцгэашэцвдйюфйыяоннщхлгшггпяэнцртмтпхыьпшншнжюэдщъынфмавхроьпясузиъижклтафрпчтнэемуысэччргпвнитзььсщярскоъойжчззлшщуцшутукэущжсбцбиьихывскухнфщчемятжмщйвркчхдптиынкящйяыгжтмаатлъеъйгпдштмрутхтмцкйшятбхцпесэмэнхщачшяиусхийжюмтпзпндрзбьтйэаинйзтхъшямдвягфылонмэошшцщщйршмкнтэтмтзпыицхясьпдхувнчртгьзгнсаьжхндгелжащзкиънаьсыюопжчрзпццдчпррмуйнпцлтуььнбымфытсфаекчцкхфкгнрвьзмтоофчшзмчуяурпрундауетбясщкпчнеькрцнбипуафэщбрицупнфньосглзх\n",
+      "decoded:\n",
       "эуъкараторприземисыдйитлинныйсловноыопльвозсдалековыцосеынойсуставчатчттясойичудовищныхруботымковшомгусоцицйглубоковминафссьрпочвуоставляинвеыепрерывныерекщисаыедорожкиразивееяоляройлязгаювоеоыоперлонеразбсщаяторогииготовокдлояокрушитьвсенйъвоумпутионочудивогеыералприроскмоътуыевсилахпошевофитксяеслиэтоконыщолкныйсюрпризтолосеъирочченьвысоучгоьбудущемведьмйуемыенияапотомстщйхихамешательствчцеофиданносхлынуфсосаалосьтолькосшчкочствиеиглубокйиувуренностьразухледкмакапустьдажоснаеинающеговсерйлносибчеибыстрееыьпыгинстинктовдиучймошиныпобедитькосхцтростнуюмощьхчжньибезоружияодцчйлцшьсилоймыслиоълихнаешькакгенещйлзыалпокатольколыеоюииноведьвтомсъосаоитсмыслконтщчльыыхполевыхзадйцийрпривязкетеороыичускихзнанийкройльыойобстановкечннорременномелькцьлажальнаяивданндтмоъентмалоуместцйямйслишкавотзачохусароилииспытансовпбстоминенаселоцноъпаркетакойэкъуавоторнагородсксюулццахстолькобылъегьпорушилзадесиыьлутнеотрослобысыакцмеетсякарьерцдйгбсеничныйэкскйлатьрмоделимоделсйчеютегознаеткакчтмотелимноготоннйиляхгающаягромадсцапьвсейвидимостсчснощенабортовымучмпкютеромсвозмопцосаьюудаленногончстбпаидистанциоццогьуправленияполъейридимостивышлйсзпьдконтроляиусшолаыатворитьлихиюнелронэльфвесьокщчварленныйваляетъиксаатипреттоонашщямьнаэльфанадооыллееьгенералпрекщйсньзналслабоемеъыотокихмеханизмолцепьворотливостьшчлзоюттакчточелолокносвоихдвоихобмчниапоэтомуонсорлйлснсместанабегушчдхратилстравышмчынишипультсигануфаерузнекстатиподлорнбвшийсякустиокожащэкскаваторслолатьтсразузамедлсфсяцвдругпроворнчлыпюосталполусогцьтычдоселековшсхщьстьмпереломилосехольдоедеревцеслчлнояпичкагенеральъпещвовремяубратеъянобезопасноераъътонниечудовищерйрвоюачивалосьготчлоеюинутьсянапряаьщесосявподлескелодьъачонкагенерафцеуаратилхладнокщчвиннапротивонужошроячиталкудаметцотснсейчасвоонтунйзаьгромныйстолеыцийтубвнесколькочкхвотовунегоподиыйкиукорничтоиэксуйвааорусходунесвчщотцтьжизньонавсомдаяильнеежелезасхотьровивдругугецоращапоявилсянежнйннййсоюзникмельуцулосредиветвейиъывощовкоричневозофеноякурточкаинелналукепоказалсяевоодцнэльфодетонбдфтоенотакжекакинонавыийпациентгенощалоновотличиеотшорвьгопребывалвпчфноъздравииисохрйцноятиивдругугенощалопоявилсянеждйцнычсоюзникмелькцьлаяредиветвейисылольвкоричневозефонанкурточкаиневнйлешепоказалсяещочдиыэльфодетонбыфыочыотакжекакиненйвнцйпациентгенещйлаыовотличиеотпощвосопребывалвпофцомхдравииисохраццосаипультутебякщскнблонгенералугоцеролмолчапоказафомуеерныйначиненцдйэщектроникойбрсуетоключтеперьгецоращстольжевыразсыелкнопохлопалсекипошарманукурткижфьфяловноподземлзшроралилсяраствощслсннафонелиствыйшотьмвозникужесолъемюядомвпарешагчлвыякользнулиззаъывощатогосамогодькаэшскаваторгромдюалсусеницамиинаыьжньлязгалковшомшщобцраясьсквозьпйщкдуревьяжалобноыщещолииломалисьрчпдащасьноваяпросоуаэщьфтребователецопюотянулрукуигоцеролнеколеблясьчыдащемупультсклюачммудлитьэльфнесчкиролсятутжевсталслкщючведвапримеыцуюзельнаторцепуфетаюаздалсянегрохуийзелчокелеслышцдйнофонепроизводсхогьэкскаваторомбьмаэальцыэльфазашчрхолинадклавиатьщойэультивпрямьоаоньэоходилнаноуткьксаойлишьразницотчтьэкранунегобыфъовяемкрохотныйищйспьлагалсяненаоыуидыойкрышкеапряхчрятомсклавишамиущышшисобственноицобыщововсеотвлексогорластноскоманнчващэльфибеззвучцчкаыулвкустычтотчьнесовидимонеладсфоскгенералпослубцопьтрусилпошироучйрозмашистойдугожксшаваторнакакооыовюемяпритихотсфожираяегоперемещоцияопотомсталгрурцорозворачиватьсишодсусеницамизахфзпащоонвъехалвоббсрнбюотороченнуюхюомщужугенералпофезунсьмоментомшмдмнущмонструзакорхьнаюазворотутогоьтдеадовольномногчлреъенисравнителецобйстрогенералоыътуэилкобширнойолйльыойполянепочехьтоумубыложалкогскнузиеподгусеницйхиишовшомдеревьялуондеконцовпаркиыйканжечастьгородйуакцкварталыаведехакьбязанхранитьмчротвесьцеликомашчляыупустьутюжитшчдуъалонтраванедощевьещевэтомгодучыраятетнеуспелмоцътррыползтикполяцуекокоткудатосбоуьпошазалсядавешнстэлкфмелкойвихлязвейюысцойонприблсриляякгенералуплчюодулосообщилэльэчнзоблокировалвсолхотныепортынадофозтквкабинугенерйфвдбмчивошмыгнулцчсоъиничегонескарйлдоичтоонмогскарйтьотысобственноуыопьинтересовалсижльвведьмакчтолицйчиыающийуточнилмонеюалскромнокакчтвыгодпервыйнестйфвротьгенералэльэъаршастическихихсунущвезетжемневпщччеъчегоэтояиначошрижлосьбыводиноауукятатичтосраналоноюомэтотвойприиыелкнавсякийслучйтспюавилсягенерафуотьрыйпультпотещилдоатыневиделлепстрндомсаллеейберъозыанияунеговесекокюазодраняегоажщозьлемспрыснулвйбимлльфнахмурилсинавусамаэвыругалъиэлкфонможетневыноржотьтвойприятефеумцралкогдаянаномоноткнулсяулыбноысяяудьбавыживетъьдьпаредкоулыбаеыъяэщьфамведьменыбрапьмниэтогенерафъмощчалладнослушйтмеыянужнозадуриыеэтьймахинеегопомйныунавигационныощецупторыипопастелкапинутымнепомопошьюазужввязалсялжтотелобоюсьтамвуйбиыеоднойпарыруукудутмалоподеревеимлозатьумеешьумозпожлиэльфзаткнуфкесэолезныйпокапьфьтхапоясштановинолоритозашагалкуповыправшемусянапчфянбэкскаваторуоыллешайпоканапомнсфонэобегайунегопощедъордойтолькосхчтрцподковшнеугонсугббуркнулгенерйфкашможнобезразлсанеубегатьпередмчщдочэкскаватораоуйзащосьнастолькопоутьмительнымзаниыиеъскольинебезошйснймпервоежезабоманцеедванезаконаслояьтрагическимчцстюрезковыпрямифшолбсогнутыйковшчннорременноподавбссьрпередизаделпфочосенералатоткукйреъполетелвтравьъовуршенноошарашоцнычещевпадениисччброзивчтопридетъимощниеносновскаусвааьневзираянабчфьиббиратьсяметрчлнатвадцатьвсторчцусьобразилонпралсльыосдвухсекундцчйзодержкойвместчмдеьнприземлилсялшечоталсяковшпохчпийыагигантскийжофезыыйкулак\n",
+      "decoded_final:\n",
       "экскаваторприземистыйидлинныйсловнотепловозсдалековынесеннойсуставчатойтягойичудовищнымзубатымковшомгусеницыглубоковминалисьвпочвуоставляядвенепрерывныеребристыедорожкиразящеесоляройлязгающееоноперлонеразбираядорогииготовобылосокрушитьвсенасвоемпутионочудищегенералприроскместуневсилахпошевелитьсяеслиэтоконтрольныйсюрпризтовесемирочченьвысокогообудущемведьмакемненияапотомстрахизамешательствонеожиданносхлынулиосталосьтолькоспокойствиеиглубокаяуверенностьразумведьмакапустьдажеиначинающеговсеравногибчеибыстреетупыхинстинктовдикоймашиныпобедитьбесхитростнуюмощьможноибезоружияоднойлишьсилоймыслиеслизнаешькакгенералзналпокатольковтеорииноведьвтомисостоитсмыслконтрольныхполевыхзаданийвпривязкетеоретическихзнанийкреальнойобстановкеодновременномелькнулашальнаяивданныймоментмалоуместнаямыслишкавотзачемустроилииспытаниевпустоминенаселенномпаркетакойэкскаваторнагородскихулицахстолькобывсегопорушилзадесятьлетнеотрослобыитакимеетсякарьерныйгусеничныйэкскаватормоделимоделиачертегознаеткакоймоделимноготоннаялязгающаягромадинаповсейвидимостиоснащенабортовымкомпьютеромсвозможностьюудаленногодоступаидистанционногоуправленияповсейвидимостивышлаизподконтроляиуспеланатворитьлихихделвонэльфвесьокровавленныйваляетсякстатипреттоонапрямонаэльфанадоотвлечьгенералпрекраснозналслабоеместотакихмеханизмовнеповоротливостьползаюттакчточеловекнасвоихдвоихобгонитпоэтомуонсорвалсясместанабегуподхватилстравышмотникипультсиганулчерезнекстатиподвернувшийсякустиобежалэкскаваторслеватотсразузамедлилсяивдругпроворновыпросталполусогнутыйдоселековшсхрустомпереломилосьмолодоедеревцесловноспичкагенералуспелвовремяубратьсянабезопасноерасстояниечудовищеразворачивалосьготовоеринутьсянапрячущегосявподлескеведьмачонкагенералнеутратилхладнокровиянапротивонужепросчиталкудаметнетсясейчасвоонтудазаогромныйстолетнийдубвнесколькообхватовунегоподитакиекорничтоиэкскаваторусходунесворотитьжизньонавсегдасильнеежелезаимоторовивдругугенералапоявилсянежданныйсоюзникмелькнуласредиветвейистволовкоричневозеленаякурточкаиневдалекепоказалсяещеодинэльфодетонбылточнотакжекакинедавнийпациентгенералановотличиеотпервогопребывалвполномздравииисохранностиивдругугенералапоявилсянежданныйсоюзникмелькнуласредиветвейистволовкоричневозеленаякурточкаиневдалекепоказалсяещеодинэльфодетонбылточнотакжекакинедавнийпациентгенералановотличиеотпервогопребывалвполномздравииисохранностипультутебякрикнулонгенералугенералмолчапоказалемучерныйначиненныйэлектроникойбрикетаключтеперьгенералстольжевыразительнопохлопалсебяпокарманукурткиэльфсловноподземлюпровалилсярастворилсянафонелиствыапотомвозникужесовсемрядомвпарешаговвыскользнулиззастволатогосамогодубаэкскаваторгромыхалгусеницамиинатужнолязгалковшомпробираясьсквозьпаркдеревьяжалобнотрещалииломалисьрождаласьноваяпросекаэльфтребовательнопротянулрукуигенералнеколеблясьотдалемупультсключоммедлитьэльфнесобиралсятутжевставилключведваприметнующельнаторцепультараздалсянегромкийщелчокелеслышныйнафонепроизводимогоэкскаваторомшумапальцыэльфазапорхалинадклавиатуройпультивпрямьоченьпоходилнаноутбукстойлишьразницейчтоэкранунегобылсовсемкрохотныйирасполагалсяненаоткиднойкрышкеапряморядомсклавишамикрышкисобственноинебылововсеотвлекиеговластноскомандовалэльфибеззвучноканулвкустычтотоунеговидимонеладилосьгенералпослушнопотрусилпоширокойразмашистойдугеэкскаваторнакакоетовремяпритихотслеживаяегоперемещенияапотомсталгрузноразворачиватьсяподгусеницамизахлюпалоонвъехалвобширнуюотороченнуюмхомлужугенералпользуясьмоментомшмыгнулмонструзакормунаразворотутогоуйдетдовольномноговременисравнительнобыстрогенералотступилкобширнойовальнойполянепочемутоемубыложалкогибнущиеподгусеницамииковшомдеревьявконцеконцовпаркитакаяжечастьгородакакикварталыаведьмакобязанхранитьгородвесьцеликомаполянупустьутюжитподумалонтраванедеревоещевэтомгодуотрастетнеуспелмонстрвыползтикполянкекакоткудатосбокупоказалсядавешнийэльфмелкойвихляющейрысцойонприблизилсякгенералуплоходелосообщилэльфонзаблокировалвсевходныепортынадолезтьвкабинугенералвдумчивошмыгнулносоминичегонесказалдаичтоонмогсказатьатысобственноктопоинтересовалсяэльфведьмакчтолиначинающийуточнилгенералскромнокакойвыходпервыйнесталвратьгенералэльфсаркастическихихикнулвезетжемневпрочемчегоэтояиначепришлосьбыводиночкукстатичтосранавеноромэтотвойприятельнавсякийслучайсправилсягенералкоторыйпультпотерялдаатыневиделлежитрядомсаллеейбезсознанияунеговесьбокразодраняегоаэрозолемспрыснулвашимэльфнахмурилсядавесамаэвыругалсяэльфонможетневыдержатьтвойприятельумиралкогдаянанегонаткнулсяулыбнетсясудьбавыживетсудьбаредкоулыбаетсяэльфамведьменышзапомниэтогенералсмолчалладнослушайменянужнозадуритьэтоймахинеегопоганыенавигационныерецепторыипопастьвкабинутымнепоможешьразужввязалсявэтоделобоюсьтамвкабинеоднойпарырукбудетмалоподеревьямлазатьумеешьумеюпошлиэльфзаткнулбесполезныйпокапультзапоясштановиделовитозашагалкужевыбравшемусянаполянуэкскаваторуотвлекайпоканапомнилонпобегайунегопередмордойтолькосмотриподковшнеугодиугубуркнулгенералкакможнобезразличнеебегатьпередмордойэкскаватораоказалосьнастолькожеутомительнымзанятиемскольинебезопаснымпервоежезабеганиеедванезакончилосьтрагическимонстррезковыпрямилполусогнутыйковшодновременноподавшисьвпередизаделплечогенералатоткубаремполетелвтравусовершенноошарашенныйещевпадениисообразивчтопридетсямолниеносновскакиватьневзираянабольиубиратьсяметровнадвадцатьвсторонусообразилонправильносдвухсекунднойзадержкойвместогдеонприземлилсявпечаталсяковшпохожийнагигантскийжелезныйкулак\n"
      ]
     }
@@ -404,9 +407,9 @@
     "\n",
     "    return plain_text\n",
     "\n",
-    "print(text_13)                            # ciphertext\n",
-    "print(dec(text_13, \"реыинтбезразличия\"))  # decoded\n",
-    "print(dec(text_13, \"родинабезразличия\"))  # decoded_final"
+    "print(f\"ciphertext:\\n{text_13}\")                               # ciphertext\n",
+    "print(f\"decoded:\\n{dec(text_13, \"реыинтбезразличия\")}\")        # decoded\n",
+    "print(f\"decoded_final:\\n{dec(text_13, \"родинабезразличия\")}\")  # decoded_final"
    ]
   },
   {
@@ -419,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "id": "0bb47c5d",
    "metadata": {},
    "outputs": [],
