--- a/lab4/lab4.ipynb
+++ b/lab4/lab4.ipynb
@@ -340,7 +340,7 @@
    "id": "6e97140d",
    "metadata": {},
    "source": [
-    "Кожну операцію рекомендується перевіряти шляхом взаємодії із тестовим середовищем, розташованим за адресою http://asymcryptwebservice.appspot.com/?section=rsa. "
+    "Кожну операцію рекомендується перевіряти шляхом взаємодії із тестовим середовищем, розташованим за адресою https://www.dcode.fr/rsa-cipher. "
    ]
   },
   {
